@@ -1,3 +1,8 @@
+2002-04-22 Naba Kumar <kh_naba@users.sourceforge.net>
+
+	* src/controls.c: CVS menu items now becomes
+	insensitive when the launcher is busy.
+	
 2002-04-19 Naba Kumar <kh_naba@users.sourceforge.net>
 
 	* src/cvs.c: Added a space in the cvs command
